fixed the bug on word-pdf on mobile size

--- a/app/assets/stylesheets/about/_container_word_pdf.scss
+++ b/app/assets/stylesheets/about/_container_word_pdf.scss
@@ -1,8 +1,3 @@
-.container-word-pdf {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
 .word-doc-card {
   position: relative;
   background-image: linear-gradient(to right, $light-blue, $light-green);
@@ -48,10 +43,6 @@
 }
 
 @media screen and (max-width: 576px) {
-  .container-word-pdf {
-    text-align: center;
-    margin-bottom: 20px;
-  }
 
   .word-doc-card {
     position: relative;
@@ -62,39 +53,39 @@
     font-weight: bold;
     border-radius: 15px;
     margin-left: 1%;
-    margin-top: 16%;
-    flex-direction: column;
+    margin-top: 6%;
+    flex-direction: row;
     font-family: 'Ubuntu', sans-serif;
     border: 2px solid $black;
   }
 
   .word-doc-title {
-    color: $black;
-    font-size: 3vw;
-    background-color: $white;
+    color: #0E0000;
+    font-size: 5vw;
+    background-color: #ffffff;
     border-radius: 15px;
     margin-top: 10%;
     height: auto;
-    width: 90%;
-    border: 2px solid $black;
-    margin-left: 5%;
+    width: 115%;
+    border: 2px solid #0E0000;
+    margin-left: 370%;
     justify-content: center;
     align-items: center;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     display: flex;
-    padding: 1%;
+    padding: 30%;
   }
 
   .icon-word-pdf {
     flex-direction: row;
     height: auto;
-    width: 70%;
+    width: 50%;
     border-radius: 15px;
     border: 2px solid $black;
     margin-top: 8%;
     display: grid;
-    margin-left: 16%;
+    margin-left: 15%;
     margin-bottom: 10%;
   }
 }
