--- a/app/assets/stylesheets/about/_test.scss
+++ b/app/assets/stylesheets/about/_test.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: 576px) {
   .test {
-    display: grid;
+    display: flex;
     flex-direction: row;
   }
 }
